syntax = "proto3";

package autoscaler;

option go_package = "github.com/orochi-db/orochi-cloud/autoscaler/api/proto";

// AutoscalerService provides autoscaling operations for Orochi Cloud clusters
service AutoscalerService {
  // GetClusterStatus returns the current scaling status of a cluster
  rpc GetClusterStatus(GetClusterStatusRequest) returns (ClusterStatus);

  // ScaleCluster triggers a manual scaling operation
  rpc ScaleCluster(ScaleClusterRequest) returns (ScaleClusterResponse);

  // UpdateScalingPolicy updates the scaling policy for a cluster
  rpc UpdateScalingPolicy(UpdateScalingPolicyRequest) returns (UpdateScalingPolicyResponse);

  // GetScalingPolicy returns the current scaling policy for a cluster
  rpc GetScalingPolicy(GetScalingPolicyRequest) returns (ScalingPolicy);

  // ListScalingEvents returns recent scaling events for a cluster
  rpc ListScalingEvents(ListScalingEventsRequest) returns (ListScalingEventsResponse);

  // StreamMetrics streams real-time metrics for a cluster
  rpc StreamMetrics(StreamMetricsRequest) returns (stream ClusterMetrics);
}

// GetClusterStatusRequest requests the status of a specific cluster
message GetClusterStatusRequest {
  string cluster_id = 1;
  string namespace = 2;
}

// ClusterStatus represents the current scaling status of a cluster
message ClusterStatus {
  string cluster_id = 1;
  string namespace = 2;
  int32 current_replicas = 3;
  int32 desired_replicas = 4;
  int32 ready_replicas = 5;
  ResourceAllocation current_resources = 6;
  ResourceAllocation desired_resources = 7;
  ScalingState state = 8;
  string last_scale_time = 9;
  ClusterMetrics current_metrics = 10;
}

// ResourceAllocation represents CPU and memory allocation
message ResourceAllocation {
  string cpu_request = 1;
  string cpu_limit = 2;
  string memory_request = 3;
  string memory_limit = 4;
  string storage = 5;
}

// ScalingState represents the current state of scaling operations
enum ScalingState {
  SCALING_STATE_UNKNOWN = 0;
  SCALING_STATE_STABLE = 1;
  SCALING_STATE_SCALING_UP = 2;
  SCALING_STATE_SCALING_DOWN = 3;
  SCALING_STATE_COOLDOWN = 4;
  SCALING_STATE_ERROR = 5;
}

// ClusterMetrics contains current cluster metrics
message ClusterMetrics {
  double cpu_utilization_percent = 1;
  double memory_utilization_percent = 2;
  int64 active_connections = 3;
  double query_latency_p50_ms = 4;
  double query_latency_p95_ms = 5;
  double query_latency_p99_ms = 6;
  double queries_per_second = 7;
  double replication_lag_seconds = 8;
  int64 disk_usage_bytes = 9;
  double disk_utilization_percent = 10;
  string timestamp = 11;
}

// ScaleClusterRequest requests a manual scaling operation
message ScaleClusterRequest {
  string cluster_id = 1;
  string namespace = 2;
  oneof scaling_type {
    HorizontalScale horizontal = 3;
    VerticalScale vertical = 4;
  }
  bool force = 5; // Bypass cooldown if true
}

// HorizontalScale specifies horizontal scaling parameters
message HorizontalScale {
  int32 target_replicas = 1;
}

// VerticalScale specifies vertical scaling parameters
message VerticalScale {
  ResourceAllocation target_resources = 1;
}

// ScaleClusterResponse returns the result of a scaling operation
message ScaleClusterResponse {
  bool success = 1;
  string message = 2;
  string operation_id = 3;
  ScalingState new_state = 4;
}

// UpdateScalingPolicyRequest updates a cluster's scaling policy
message UpdateScalingPolicyRequest {
  string cluster_id = 1;
  string namespace = 2;
  ScalingPolicy policy = 3;
}

// UpdateScalingPolicyResponse returns the result of policy update
message UpdateScalingPolicyResponse {
  bool success = 1;
  string message = 2;
}

// GetScalingPolicyRequest requests a cluster's scaling policy
message GetScalingPolicyRequest {
  string cluster_id = 1;
  string namespace = 2;
}

// ScalingPolicy defines the autoscaling behavior for a cluster
message ScalingPolicy {
  string cluster_id = 1;
  string namespace = 2;
  bool enabled = 3;

  // Horizontal scaling configuration
  HorizontalScalingPolicy horizontal = 4;

  // Vertical scaling configuration
  VerticalScalingPolicy vertical = 5;

  // Custom scaling rules
  repeated ScalingRule custom_rules = 6;

  // Predictive scaling configuration
  PredictiveScalingPolicy predictive = 7;
}

// HorizontalScalingPolicy configures horizontal scaling
message HorizontalScalingPolicy {
  bool enabled = 1;
  int32 min_replicas = 2;
  int32 max_replicas = 3;

  // Target metrics for scaling
  double target_cpu_utilization = 4;
  double target_memory_utilization = 5;
  int64 target_connections_per_replica = 6;
  double target_query_latency_ms = 7;

  // Scaling behavior
  int32 scale_up_cooldown_seconds = 8;
  int32 scale_down_cooldown_seconds = 9;
  int32 scale_up_step = 10;    // Max replicas to add per scaling event
  int32 scale_down_step = 11;  // Max replicas to remove per scaling event

  // Stabilization window
  int32 stabilization_window_seconds = 12;
}

// VerticalScalingPolicy configures vertical scaling
message VerticalScalingPolicy {
  bool enabled = 1;
  ResourceAllocation min_resources = 2;
  ResourceAllocation max_resources = 3;

  // Target utilization for right-sizing
  double target_cpu_utilization = 4;
  double target_memory_utilization = 5;

  // Update mode
  VerticalScaleMode mode = 6;

  int32 cooldown_seconds = 7;
}

// VerticalScaleMode determines how vertical scaling is applied
enum VerticalScaleMode {
  VERTICAL_SCALE_MODE_UNKNOWN = 0;
  VERTICAL_SCALE_MODE_OFF = 1;
  VERTICAL_SCALE_MODE_INITIAL = 2;  // Only set on pod creation
  VERTICAL_SCALE_MODE_AUTO = 3;     // Automatically restart pods
  VERTICAL_SCALE_MODE_RECREATE = 4; // Rolling restart to apply changes
}

// ScalingRule defines a custom scaling rule
message ScalingRule {
  string name = 1;
  string metric_name = 2;
  ScalingRuleOperator operator = 3;
  double threshold = 4;
  int32 duration_seconds = 5;  // How long condition must be true
  ScalingAction action = 6;
  int32 cooldown_seconds = 7;
  int32 priority = 8;  // Higher priority rules evaluated first
}

// ScalingRuleOperator defines comparison operators for rules
enum ScalingRuleOperator {
  SCALING_RULE_OPERATOR_UNKNOWN = 0;
  SCALING_RULE_OPERATOR_GT = 1;
  SCALING_RULE_OPERATOR_GTE = 2;
  SCALING_RULE_OPERATOR_LT = 3;
  SCALING_RULE_OPERATOR_LTE = 4;
  SCALING_RULE_OPERATOR_EQ = 5;
}

// ScalingAction defines what action to take when a rule triggers
message ScalingAction {
  ScalingActionType type = 1;
  int32 value = 2;  // Replicas to add/remove or percentage
}

// ScalingActionType defines types of scaling actions
enum ScalingActionType {
  SCALING_ACTION_TYPE_UNKNOWN = 0;
  SCALING_ACTION_TYPE_ADD_REPLICAS = 1;
  SCALING_ACTION_TYPE_REMOVE_REPLICAS = 2;
  SCALING_ACTION_TYPE_SET_REPLICAS = 3;
  SCALING_ACTION_TYPE_ADD_PERCENT = 4;
  SCALING_ACTION_TYPE_REMOVE_PERCENT = 5;
}

// PredictiveScalingPolicy configures predictive scaling
message PredictiveScalingPolicy {
  bool enabled = 1;
  int32 look_ahead_seconds = 2;
  double confidence_threshold = 3;  // Minimum confidence to act on prediction
  repeated ScheduledScalingEvent scheduled_events = 4;
}

// ScheduledScalingEvent defines a scheduled scaling event
message ScheduledScalingEvent {
  string name = 1;
  string cron_expression = 2;  // When to apply this scaling
  int32 target_replicas = 3;
  ResourceAllocation target_resources = 4;
  int32 duration_minutes = 5;  // How long to maintain this scale
}

// ListScalingEventsRequest requests scaling event history
message ListScalingEventsRequest {
  string cluster_id = 1;
  string namespace = 2;
  int32 limit = 3;
  string start_time = 4;
  string end_time = 5;
}

// ListScalingEventsResponse returns scaling event history
message ListScalingEventsResponse {
  repeated ScalingEvent events = 1;
}

// ScalingEvent represents a scaling event that occurred
message ScalingEvent {
  string event_id = 1;
  string cluster_id = 2;
  string namespace = 3;
  string timestamp = 4;
  ScalingEventType type = 5;
  string trigger = 6;  // What triggered this event
  int32 from_replicas = 7;
  int32 to_replicas = 8;
  ResourceAllocation from_resources = 9;
  ResourceAllocation to_resources = 10;
  bool success = 11;
  string error_message = 12;
  ClusterMetrics metrics_at_event = 13;
}

// ScalingEventType categorizes scaling events
enum ScalingEventType {
  SCALING_EVENT_TYPE_UNKNOWN = 0;
  SCALING_EVENT_TYPE_SCALE_UP = 1;
  SCALING_EVENT_TYPE_SCALE_DOWN = 2;
  SCALING_EVENT_TYPE_SCALE_OUT = 3;
  SCALING_EVENT_TYPE_SCALE_IN = 4;
  SCALING_EVENT_TYPE_MANUAL = 5;
  SCALING_EVENT_TYPE_SCHEDULED = 6;
  SCALING_EVENT_TYPE_PREDICTIVE = 7;
}

// StreamMetricsRequest requests metrics streaming
message StreamMetricsRequest {
  string cluster_id = 1;
  string namespace = 2;
  int32 interval_seconds = 3;
}
